Correction greenborder, titre des menus en dehors des grids splits et responsive wrap en media query

--- a/assets/css/menu.css
+++ b/assets/css/menu.css
@@ -35,7 +35,7 @@ main {
     padding: 32px 17px 40px 17px;
 
     @media screen and (min-width: 769px) {
-      margin: 0px 192px;
+      margin: 0px 100px;
       padding: 51px 100px 40px 100px;
     }
 
@@ -84,6 +84,10 @@ main {
     }
   }
 
+  .container__menu--grid {
+    margin-top: 40px;
+  }
+
   .container__button {
     display: flex;
     justify-content: center;
@@ -128,10 +132,10 @@ main {
 
   .grid--split {
     display: grid;
-    grid-template-columns: repeat(1fr);
+    grid-template-columns: 1fr;
     grid-template-rows: repeat(4, 1fr);
     gap: 12px;
-    margin-top: 40px;
+    margin-top: 20px;
   }
 
   .container__article {
@@ -191,11 +195,13 @@ main {
     transform: translateX(-60px);
   }
 
-  .button-input:checked ~ .container__article .entree {
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    max-width: 150px;
+  @media screen and (max-width: 769px) {
+    .button-input:checked ~ .container__article .entree {
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      max-width: 150px;
+    }
   }
 
   .button-input:not(:checked) ~ .gliss__tab {
