--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -84,6 +84,7 @@ body {
 
   /* green border subtitles ENTREE-PLAT-DESSERT */
   .greenborder {
+    display: block;
     border-bottom: solid 3px #99e2d0;
     width: 40px;
     height: 27px;
